--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Minecraft java版1.20.1 工业 空岛</div>
         <td>机械动力</td><td>机械动力:中央厨房</td><td>机械动力:物品附加</td><td>机械动力:实用物品</td><td>机械动力:筛子</td><td>机械动力:汽鸣铁道</td>
     </tr>
     <tr>
-        <td>热力基本</td><td>热动力学</td><td>热力革新</td><td>热力集成</td><td>热力农业</td><td>热力膨胀</td><td>热力运输</td>
+        <td>热力基本</td><td>热力革新</td><td>热力集成</td><td>热力农业</td><td>热力膨胀</td><td>热力运输</td>
     </tr>
 	<tr>
 	    <td>通用机械</td><td>通用机械发电机</td><td>通用机械附加</td><td>通用机械更多太阳能</td><td>通用机械工具</td><td>通用机械武器</td><td>BetterFusionReactor</td><td>mekanism_extras</td>
@@ -111,7 +111,7 @@ Minecraft java版1.20.1 工业 空岛</div>
 </table>
 <div style="font-size: 20px; color: black;">
 注:模组未完全列出
-不了解的模组请在这里查询:<a href="https://www.mcmod.cn">mc百科</a></div>
+不了解的模组请在这里查询:<a href="https://www.mcmod.cn">mc百科</a>
 <hr>
 服主/管理员:1人
 服务器公告
