--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Minecraft java版1.20.1 工业 空岛</div>
 	 <td>傀儡装配</td><td>农夫乐事</td><td>玉米乐事</td><td>alex's Delight</td><td>末地乐事</td><td>MyNethersDelight</td>
 	</tr>
 	<tr>
-	 <td>天空村庄</td><td>BuckshotRoulette</td>
+	 <td>天空村庄</td><td>BuckshotRoulette</td><td>灾变</td>
 	</tr>
 </table>
 <div style="font-size: 20px; color: black;">
