--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 Minecraft java版1.20.1 工业 空岛</div>
 <div style="text-align: center; font-size: 25px; color: black;">  
     不想玩空岛? 同时也配备了主世界。<br>  
-    客户端下载地址: <a href="https://www.123pan.com/s/Lvxijv-TpMgh.html">点击下载</a><br>  
+    客户端下载地址: <a href="https://qm.qq.com/q/jQyxudtZkc">点击下载</a><br>  
     服务器官方q群: <a href="https://qm.qq.com/q/jQyxudtZkc">885627826</a>  
 </div>
 <div style="text-align: center; font-size: 20px; color: black;">  
