--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Minecraft java版1.20.1 工业 空岛</div>
 </div>
 <table id="t1">
     <tr>
-        <td>应用能源2</td><td>应用能源：植物魔法附属</td><td>应用能源：通用机械附属</td><td>bigger_ae2</td><td>AE2扩展</td><td>AEAdditions</td>
+        <td>应用能源2</td><td>应用能源：植物魔法附属</td><td>应用能源：通用机械附属</td><td>bigger_ae2</td><td>AE2扩展</td><td>AEAdditions</td><td>AppliedFlux</td>
     </tr>
     <tr>
         <td>机械动力</td><td>机械动力:中央厨房</td><td>机械动力:物品附加</td><td>机械动力:实用物品</td><td>机械动力:筛子</td><td>机械动力:汽鸣铁道</td>
@@ -75,13 +75,13 @@ Minecraft java版1.20.1 工业 空岛</div>
         <td>热力基本</td><td>热力革新</td><td>热力集成</td><td>热力农业</td><td>热力膨胀</td><td>热力运输</td>
     </tr>
 	<tr>
-	    <td>通用机械</td><td>通用机械发电机</td><td>通用机械附加</td><td>通用机械更多太阳能</td><td>通用机械工具</td><td>通用机械武器</td><td>BetterFusionReactor</td><td>mekanism_extras</td>
+	    <td>通用机械</td><td>通用机械发电机</td><td>通用机械附加</td><td>通用机械更多太阳能</td><td>通用机械工具</td><td>通用机械武器</td><td>mekanism_lasers</td><td>mekanism_extras</td><td>mekanism_turrets</td>
 	</tr>
 	<tr>
 	    <td>沉浸工程</td><td>工业先锋</td><td>industrial-foregoing-souls</td><td>交错道途</td><td>通量网络</td><td>无中生有:传承</td><td>压缩工具</td><td>exmachinis</td>
 	</tr>
     <tr>
-        <td>ad_astra</td><td>ad_astra_rocket</td><td>Ad-Astra-Giselle-Addon</td><td>龙之进化;龙之研究</td><td>龙之进化拓展</td><td>无尽贪婪;重生</td>	
+        <td>ad_astra</td><td>ad_astra_rocket</td><td>Ad-Astra-Giselle-Addon</td><td>龙之进化;龙之研究</td><td>龙之进化拓展</td><td>无尽贪婪;重生</td><td>神秘农业</td><td>神秘农业扩展</td></tr>
 </table>
 <div style="text-align: center; font-size: 20px; color: black;">魔法</div>
 <table id="t1">
@@ -114,6 +114,7 @@ Minecraft java版1.20.1 工业 空岛</div>
 不了解的模组请在这里查询:<a href="https://www.mcmod.cn">mc百科</a>
 <hr>
 服主/管理员:1人
+建筑师:1人
 服务器公告
 </div>
 <iframe src="./1.html">
